Preserve whitespace formatting in comments. Ensure that the comment field doesn't become too large.

--- a/app/assets/stylesheets/backend/resources/pitch_card.scss
+++ b/app/assets/stylesheets/backend/resources/pitch_card.scss
@@ -122,6 +122,8 @@ textarea[disabled].form-pitch-point{
   padding: 5px;
   resize: none;
   width: 100%;
+  max-height: 300px;
+  min-height: 100px;
   height: auto;
   display: block;
   overflow: hidden;
