--- a/app/assets/stylesheets/frontend/content.scss
+++ b/app/assets/stylesheets/frontend/content.scss
@@ -516,3 +516,7 @@ svg{
   max-width: 100%;
   height: auto;
 }
+
+.format-comment{
+  word-wrap: break-word;
+}
